feat: add initial content to the dashboard
